# wasm-plugin-experiment

./: README.md  run.sh
host/: Cargo.toml  host.wit
host/src/: main.rs
plugin/: Cargo.toml  plugin.wit
plugin/.cargo/: config.toml
plugin/src/: lib.rs
